@@ -1,3 +1,8 @@
+2006-01-17 14:22 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridfacer.c (gridfacerCollapse,gridfacerCollapseEdge) started,
+	not operational yet.
+
 2006-01-17 13:20 Mike Park  <mike.park@nasa.gov>
 
 	* geomSGIn32 removed the woefully old geoSDK snapshot for Alan.
